fixes searchbar alignment

--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -11,7 +11,7 @@ nav {
   grid-template-columns: auto 100px 100px 100px 100px 100px 215px;
   grid-template-rows: 120px;
   align-items: center;
-  justify-items: center;
+  justify-items: left;
   grid-gap: 0 10px;
 
   list-style: none;
